Styling the seat selection page

--- a/styles/base/palet-color.css
+++ b/styles/base/palet-color.css
@@ -7,6 +7,7 @@
     --color-borderBox: #25252C;
     --color-sky: #B3E5E5;
     --color-disable: #454555;
+    --color-reserved:#3A3A04;
     --fontW6: 600;
     --fontW7: 700;
     --fontWB: bold;
