Update file paths

--- a/styles/pages/set-selection.css
+++ b/styles/pages/set-selection.css
@@ -1,5 +1,5 @@
 .back-image {
-    background-image: url(/assets/images/cover/f1-cover.webp);
+    background-image: url(../../assets/images/cover/f1-cover.webp);
     opacity: 0.5;
     width: 100%;
     height: 32.8rem;
